New prolyfill version

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="demo-styles.css">
 <link rel="stylesheet" href="box-styles.css">
 <script src="demo.js"></script>
-<script src="https://cdn.rawgit.com/ausi/cq-prolyfill/598c31e/cq-prolyfill.js"></script>
+<script src="https://cdn.rawgit.com/ausi/cq-prolyfill/v0.2.0/cq-prolyfill.js"></script>
 
 <h1>Container Queries Demo</h1>
 
