--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <title>Container Queries Demo</title>
 <link rel="stylesheet" href="demo-styles.css">
-<link rel="stylesheet" href="box-styles.css">
+<link rel="stylesheet" href="box-styles-processed.css">
 <script src="demo.js"></script>
-<script src="https://cdn.rawgit.com/ausi/cq-prolyfill/v0.2.0/cq-prolyfill.js"></script>
+<script src="https://unpkg.com/cq-prolyfill@0.4.0/cq-prolyfill.min.js"></script>
 
 <h1>Container Queries Demo</h1>
 
@@ -67,13 +67,13 @@
 </div>
 
 <h2>Width queries</h2>
-<pre><code>.box:container(width > 40em) { ... }
-.box:container(width > 40em <= 70em)</code></pre>
+<pre><code>.box:container(min-width: 40em) { ... }
+.box:container(40em < width <= 70em)</code></pre>
 
 <h2>Background color queries</h2>
-<pre><code>.box:container(background-color lightness < 20%) { ... }
-.box:container(background-color saturation > 50%) { ... }
-.box:container(background-color hue > 60deg < 180deg) { ... }</code></pre>
+<pre><code>.box:container(background-color-lightness < 20%) { ... }
+.box:container(min-background-color-saturation: 50%) { ... }
+.box:container(60deg < background-color-hue < 180deg) { ... }</code></pre>
 
 <h2>Text align queries</h2>
 <pre><code>.box:container(text-align = right) { ... }</code></pre>
